--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
-    <link rel="stylesheet" href="/css/mainstyle.css">
+    <link rel="stylesheet" href="css/mainstyle.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
-    <link rel="icon" type="image/x-icon" href="/img/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -57,42 +57,42 @@
             <h2 class="text-center section-title mb-5">Mijn Gallerie</h2>
             <div class="portfolio-carousel">
                 <div class="portfolio-item">
-                    <img src="/img/art1.jpg" alt="Graffiti Art" class="img-fluid">
+                    <img src="img/art1.jpg" alt="Graffiti Art" class="img-fluid">
                     <div class="portfolio-overlay">
                         <h4>Desone</h4>
                         <p>Hier een voorbeeld van mijn graffiti</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="/img/art2.jpg" alt="Graffiti Art" class="img-fluid">
+                    <img src="img/art2.jpg" alt="Graffiti Art" class="img-fluid">
                     <div class="portfolio-overlay">
                         <h4>Desone</h4>
                         <p>Hier een voorbeeld van mijn graffiti</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="/img/art3.jpg" alt="Graffiti Art" class="img-fluid">
+                    <img src="img/art3.jpg" alt="Graffiti Art" class="img-fluid">
                     <div class="portfolio-overlay">
                         <h4>Desone</h4>
                         <p>Hier een voorbeeld van mijn graffiti</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="/img/art5.jpg" alt="Graffiti Art" class="img-fluid">
+                    <img src="img/art5.jpg" alt="Graffiti Art" class="img-fluid">
                     <div class="portfolio-overlay">
                         <h4>Desone</h4>
                         <p>Hier een voorbeeld van mijn graffiti</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="/img/art7.jpg" alt="Graffiti Art" class="img-fluid">
+                    <img src="img/art7.jpg" alt="Graffiti Art" class="img-fluid">
                     <div class="portfolio-overlay">
                         <h4>Desone</h4>
                         <p>Hier een voorbeeld van mijn graffiti</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="/img/art6.jpg" alt="Graffiti Art" class="img-fluid">
+                    <img src="img/art6.jpg" alt="Graffiti Art" class="img-fluid">
                     <div class="portfolio-overlay">
                         <h4>Desone</h4>
                         <p>Hier een voorbeeld van mijn graffiti</p>
@@ -144,7 +144,7 @@
                     <a href="#contact" class="btn btn-primary mt-3">Kom in contact</a>
                 </div>
                 <div class="col-md-6">
-                    <img src="/img/art4.jpg" alt="Desone" class="img-fluid rounded-circle shadow-lg">
+                    <img src="img/art4.jpg" alt="Desone" class="img-fluid rounded-circle shadow-lg">
                 </div>
             </div>
         </div>
@@ -179,7 +179,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-    <script src="/js/mainjs.js"></script>
+    <script src="js/mainjs.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
 </body>
 </html>
