--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desone | Graffiti</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.3/simple-lightbox.min.css">
     <link rel="stylesheet" href="css/mainstyle.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
-    <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#home">
-                <h2>Desone | Graffiti</h2>
-            </a>
+            <a class="navbar-brand" href="#home">Desone | Graffiti</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -57,46 +54,58 @@
             <h2 class="text-center section-title mb-5">Mijn Gallerie</h2>
             <div class="portfolio-carousel">
                 <div class="portfolio-item">
-                    <img src="img/art1.jpg" alt="Graffiti Art" class="img-fluid">
-                    <div class="portfolio-overlay">
-                        <h4>Desone</h4>
-                        <p>Hier een voorbeeld van mijn graffiti</p>
-                    </div>
+                    <a href="img/art1.jpg" class="lightbox-trigger">
+                        <img src="img/art1.jpg" class="img-fluid" alt="Desone - Hier een voorbeeld van mijn graffiti">
+                        <div class="portfolio-overlay">
+                            <h4>Desone</h4>
+                            <p>Hier een voorbeeld van mijn graffiti</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="portfolio-item">
-                    <img src="img/art2.jpg" alt="Graffiti Art" class="img-fluid">
-                    <div class="portfolio-overlay">
-                        <h4>Desone</h4>
-                        <p>Hier een voorbeeld van mijn graffiti</p>
-                    </div>
+                    <a href="img/art2.jpg" class="lightbox-trigger">
+                        <img src="img/art2.jpg" class="img-fluid" alt="Desone - Hier een voorbeeld van mijn graffiti">
+                        <div class="portfolio-overlay">
+                            <h4>Desone</h4>
+                            <p>Hier een voorbeeld van mijn graffiti</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="portfolio-item">
-                    <img src="img/art3.jpg" alt="Graffiti Art" class="img-fluid">
-                    <div class="portfolio-overlay">
-                        <h4>Desone</h4>
-                        <p>Hier een voorbeeld van mijn graffiti</p>
-                    </div>
+                    <a href="img/art3.jpg" class="lightbox-trigger">
+                        <img src="img/art3.jpg" class="img-fluid" alt="Desone - Hier een voorbeeld van mijn graffiti">
+                        <div class="portfolio-overlay">
+                            <h4>Desone</h4>
+                            <p>Hier een voorbeeld van mijn graffiti</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="portfolio-item">
-                    <img src="img/art5.jpg" alt="Graffiti Art" class="img-fluid">
-                    <div class="portfolio-overlay">
-                        <h4>Desone</h4>
-                        <p>Hier een voorbeeld van mijn graffiti</p>
-                    </div>
+                    <a href="img/art5.jpg" class="lightbox-trigger">
+                        <img src="img/art5.jpg" class="img-fluid" alt="Desone - Hier een voorbeeld van mijn graffiti">
+                        <div class="portfolio-overlay">
+                            <h4>Desone</h4>
+                            <p>Hier een voorbeeld van mijn graffiti</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="portfolio-item">
-                    <img src="img/art7.jpg" alt="Graffiti Art" class="img-fluid">
-                    <div class="portfolio-overlay">
-                        <h4>Desone</h4>
-                        <p>Hier een voorbeeld van mijn graffiti</p>
-                    </div>
+                    <a href="img/art7.jpg" class="lightbox-trigger">
+                        <img src="img/art7.jpg" class="img-fluid" alt="Desone - Hier een voorbeeld van mijn graffiti">
+                        <div class="portfolio-overlay">
+                            <h4>Desone</h4>
+                            <p>Hier een voorbeeld van mijn graffiti</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="portfolio-item">
-                    <img src="img/art6.jpg" alt="Graffiti Art" class="img-fluid">
-                    <div class="portfolio-overlay">
-                        <h4>Desone</h4>
-                        <p>Hier een voorbeeld van mijn graffiti</p>
-                    </div>
+                    <a href="img/art6.jpg" class="lightbox-trigger">
+                        <img src="img/art6.jpg" class="img-fluid" alt="Desone - Hier een voorbeeld van mijn graffiti">
+                        <div class="portfolio-overlay">
+                            <h4>Desone</h4>
+                            <p>Hier een voorbeeld van mijn graffiti</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -115,14 +124,14 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="service-box text-center p-4">
-                        <i class="fas fa-headphones fa-3x mb-3"></i>
+                        <i class="fas fa-music fa-3x mb-3"></i>
                         <h4>DJ Draaien</h4>
                         <p>Breng energie naar je event met mijn unieke mixen en beats.</p>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="service-box text-center p-4">
-                        <i class="fas fa-users fa-3x mb-3"></i>
+                        <i class="fas fa-paint-brush fa-3x mb-3"></i>
                         <h4>Custom Graffiti voor Jou</h4>
                         <p>Laat mij jouw visie tot leven brengen met gepersonaliseerde graffiti.</p>
                     </div>
@@ -130,7 +139,6 @@
             </div>
         </div>
     </section>
-    
 
     <section id="about" class="section py-5">
         <div class="container fade-in">
@@ -156,20 +164,20 @@
             <div class="row">
                 <div class="col-md-8 mx-auto">
                     <div class="contact-info">
-                        <h5><i class="fas fa-envelope"></i> <a href="mailto:riesdesone0308@outlook.com" class="text-light">riesdesone0308@outlook.com</a></h5>
-                        <h5><i class="fas fa-phone"></i> <a href="tel:+31612701160" class="text-light">06 12701160</a></h5>
+                        <h5><i class="far fa-envelope mr-2"></i><a href="mailto:riesdesone0308@outlook.com" class="text-light">riesdesone0308@outlook.com</a></h5>
+                        <h5><i class="fas fa-phone mr-2"></i><a href="tel:+31612701160" class="text-light">06 12701160</a></h5>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer class="bg-dark text-white py-4">
+    <footer class="py-4 bg-dark text-white">
         <div class="container">
             <div class="social-icons mb-4 text-center">
-                <a href="https://www.instagram.com/desone1968/" target="_blank" class="mr-3"><i class="fab fa-instagram fa-2x"></i></a>
-                <a href="#" class="mr-3"><i class="fab fa-facebook-f fa-2x"></i></a>
-                <a href="#" class="mr-3"><i class="fab fa-twitter fa-2x"></i></a>
+                <a href="https://www.instagram.com/desone1968/" target="_blank" class="mr-3"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="mr-3"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="mr-3"><i class="fab fa-twitter"></i></a>
             </div>
             <p class="text-center mb-0">© 2024 Richard Blokpoel. Alle rechten voorbehouden.</p>
         </div>
@@ -179,7 +187,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.3/simple-lightbox.min.js"></script>
     <script src="js/mainjs.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
 </body>
 </html>
