--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <p>Vandaag de dag ben ik actief op legale plekken rondom Den Haag en andere toegestane gebieden. Mijn werk is een weerspiegeling van mijn lange reis en de ontwikkeling die ik door de jaren heen heb doorgemaakt. Graffiti is voor mij niet alleen kunst, maar een manier van leven.</p>
                     <a href="#contact" class="btn btn-primary mt-3">Kom in contact</a>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6"><br><br>
                     <img src="img/art4.jpg" alt="Desone" class="img-fluid rounded-circle shadow-lg">
                 </div>
             </div>
