--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <section id="home" class="section hero-section text-white text-center d-flex justify-content-center align-items-center" style=" background-image: url(/img/header.jpg);">
+    <section id="home" class="section hero-section text-white text-center d-flex justify-content-center align-items-center" style=" background-image: url(img/header.jpg);">
         <div class="container fade-in">
             <h1 class="display-3 graffiti-font">Desone | Graffiti</h1>
             <p class="lead">Ruimtes transformeren met gedurfde, expressieve kunst</p>
